# yatamux

./: AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  build.rs  manifest.xml  task.md
.claude/: settings.local.json
.github/workflows/: bump-version.yml  create-tag.yml  e2e.yml  release.yml
crates/client/: Cargo.toml
crates/client/src/: connection.rs  ime.rs  layout.rs  lib.rs  notification.rs  session.rs  theme.rs  url.rs  window.rs
crates/client/src/layout/: catalog.rs  launcher.rs  store.rs  tree.rs
crates/client/src/window/: input.rs  mod.rs  render.rs
crates/client/src/window/win32/: modes.rs  wndproc.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  message.rs  types.rs
crates/renderer/: Cargo.toml
crates/renderer/benches/: render_ops.rs
crates/renderer/src/: draw_ops.rs  lib.rs  text.rs
crates/server/: Cargo.toml
crates/server/src/: ipc.rs  lib.rs  pane.rs  session.rs
crates/server/src/session/: mod.rs  model.rs  tree.rs
crates/server/src/session/handlers/: mod.rs  pane.rs  query.rs  support.rs  workspace.rs
crates/server/tests/: ipc_integration.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: cell.rs  grid.rs  lib.rs  process.rs  pty.rs  vt.rs  width.rs
crates/terminal/src/grid/: grapheme.rs  mod.rs  screen.rs  scrollback.rs  state.rs  text.rs
crates/terminal/src/vt/: color.rs  csi.rs  esc.rs  mod.rs  osc.rs  sgr.rs
crates/terminal/tests/: pty_integration.rs
docs/: agent-operations.md  bench-draw-ops-vs-master.md  design-floating-pane.md  design-notification-backend.md  design-ownership-lifecycle.md  design-plugin-system.md  design-status-bar.md  manual-test-send-keys.md  manual-verification-checklist.md  protocol-ipc.md  send-keys-spec.md  test-plan-agent-env.md  test-plan-bidi-rtl.md  test-plan-capture-pane-json.md  test-plan-capture-pane.md  test-plan-ci-node24.md  test-plan-claude-code-skill.md  test-plan-command-finished.md  test-plan-copy-mode.md  test-plan-direction-nav.md  test-plan-draw-ops-batched-dense-ascii.md  test-plan-e2e.md  test-plan-floating-pane.md  test-plan-ipc-hardening.md  test-plan-ipc-protocol.md  test-plan-key-passthrough.md  test-plan-layout-config.md  test-plan-layout-launcher.md  test-plan-normal-mouse-select.md  test-plan-notification-backend.md  test-plan-notifications.md  test-plan-osc52.md  test-plan-pane-alert.md  test-plan-pane-alias-role.md  test-plan-pane-click-focus.md  test-plan-pane-close.md  test-plan-pane-control-cli.md  test-plan-pane-render-split-resize.md  test-plan-pane-resize-direction.md  test-plan-pane-resize.md  (+19 more)
docs/tasks/: active.md  refactor.md
integrations/claude-code/: AGENTS.md  README.md  SKILL.md  system-prompt.md
integrations/claude-code/references/: patterns.md
integrations/claude-code/scripts/: new-worker-pane.ps1  run-in-pane.sh  watch-pane.ps1
src/: app.rs  ci.rs  cli.rs  config.rs  layout_config.rs  main.rs  update.rs
src/app/: bootstrap.rs  bridge.rs  layout_restore.rs  layout_switch.rs
tests/: e2e_smoke.rs  update_helper_probe.rs
