[workspace]
members = [
    ".",
    "crates/server",
    "crates/client",
    "crates/protocol",
    "crates/terminal",
    "crates/renderer",
]
resolver = "2"

[workspace.dependencies]
# IPC / async
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

# Terminal / PTY
portable-pty = "0.8"
termwiz = "0.22"
vte = "0.13"

# Unicode / CJK
unicode-width = "0.2"
unicode-segmentation = "1"
unicode-normalization = "0.1"

# Windows API
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_Shell",
] }

# Base64 (OSC 52 クリップボード)
base64 = "0.22"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package]
name = "yatamux"
version = "0.1.0"
edition = "2021"
description = "CJK-aware terminal multiplexer for Windows"
repository = "https://github.com/raiga0310/cmux-win"
license = "MIT"

[[bin]]
name = "yatamux"
path = "src/main.rs"

[features]
cli = []

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }

clap = { workspace = true }
yatamux-server = { path = "crates/server" }

[target.'cfg(windows)'.dependencies]
# AttachConsole + CreateFileW("CONOUT$") + SetStdHandle で
# リリース GUI ビルドでも --help などの出力を親コンソールに届ける
windows = { workspace = true, features = ["Win32_Storage_FileSystem", "Win32_Security"] }
yatamux-client = { path = "crates/client" }
yatamux-protocol = { path = "crates/protocol" }
yatamux-terminal = { path = "crates/terminal" }
