[workspace]
members = [
    ".",
    "crates/server",
    "crates/client",
    "crates/protocol",
    "crates/terminal",
    "crates/renderer",
]
resolver = "2"

[workspace.package]
version = "0.1.27"
edition = "2021"
description = "CJK-aware terminal multiplexer for Windows"
repository = "https://github.com/raiga0310/yatamux"
license = "MIT"

[workspace.dependencies]
# IPC / async
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

# Terminal / PTY
portable-pty = "0.8"
termwiz = "0.22"
vte = "0.15"

# Unicode / CJK
unicode-width = "0.2"
unicode-segmentation = "1"
unicode-normalization = "0.1"

# Windows API
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_Shell",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
] }

# Base64 (OSC 52 クリップボード)
base64 = "0.22"

# SHA-256 (セルフアップデートのチェックサム検証)
sha2 = "0.10"

# HTTP クライアント (セルフアップデートのダウンロード)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[package]
name = "yatamux"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "yatamux"
path = "src/main.rs"

[features]
cli = []

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

clap = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
yatamux-server = { path = "crates/server" }

[target.'cfg(windows)'.dependencies]
# AttachConsole + CreateFileW("CONOUT$") + SetStdHandle で
# リリース GUI ビルドでも --help などの出力を親コンソールに届ける
windows = { workspace = true, features = ["Win32_Storage_FileSystem", "Win32_Security", "Win32_System_Threading"] }
yatamux-client = { path = "crates/client" }
yatamux-protocol = { path = "crates/protocol" }
yatamux-terminal = { path = "crates/terminal" }
