[package]
name = "cmux-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

cmux-protocol = { path = "../protocol" }
cmux-terminal = { path = "../terminal" }
cmux-renderer = { path = "../renderer" }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
