[package]
name = "yatamux-client"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

yatamux-protocol = { path = "../protocol" }
yatamux-terminal = { path = "../terminal" }
yatamux-renderer = { path = "../renderer" }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
