[package]
name = "yatamux-renderer"
version = "0.1.5"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unicode-width = { workspace = true }

yatamux-terminal = { path = "../terminal" }
yatamux-protocol = { path = "../protocol" }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "render_ops"
harness = false
