[package]
name = "yatamux-renderer"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unicode-width = { workspace = true }

yatamux-terminal = { path = "../terminal" }
yatamux-protocol = { path = "../protocol" }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "render_ops"
harness = false
