[package]
name = "yatamux-server"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

vte = { workspace = true }

portable-pty = { workspace = true }
yatamux-protocol = { path = "../protocol" }
yatamux-terminal = { path = "../terminal" }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
yatamux-client = { path = "../client" }
