[package]
name = "yatamux-server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
getrandom = { workspace = true }

vte = { workspace = true }

portable-pty = { workspace = true }
yatamux-protocol = { path = "../protocol" }
yatamux-terminal = { path = "../terminal" }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
yatamux-client = { path = "../client" }
