[package]
name = "yatamux-terminal"
version = "0.1.4"
edition = "2021"

[dependencies]
portable-pty = { workspace = true }
vte = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-normalization = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

yatamux-protocol = { path = "../protocol" }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
