[package]
name = "yatamux-terminal"
version.workspace = true
edition.workspace = true

[dependencies]
portable-pty = { workspace = true }
vte = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-normalization = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

yatamux-protocol = { path = "../protocol" }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
